unicode (2.6) unstable; urgency=low

  * fix crash when using Uxxxx (as opposed to U+xxxx) (closes: #836594)

 -- Radovan Garabík <garabik@kassiopeia.juls.savba.sk>  Fri, 14 Jul 2017 16:41:29 +0200

unicode (2.5) unstable; urgency=low

  * do not display control characters in tabular output
  * Look for Blocks.txt in ~/.unicode

 -- Radovan Garabík <garabik@kassiopeia.juls.savba.sk>  Sun, 19 Mar 2017 09:52:06 +0100

unicode (2.4) unstable; urgency=medium

  * fix unihan properties listing
  * don't assume Blocks.txt is in ASCII, fixes crash using python2 and
    UnicodeData v9.0 (closes: #828020)

 -- Radovan Garabík <garabik@kassiopeia.juls.savba.sk>  Fri, 24 Jun 2016 16:23:05 +0200

unicode (2.3) unstable; urgency=low

  * convert to setuptools

 -- Radovan Garabík <garabik@kassiopeia.juls.savba.sk>  Thu, 02 Jun 2016 15:47:19 +0200

unicode (2.2) unstable; urgency=low

  * display unicode block (thanks to drastus for inspiration)

 -- Radovan Garabík <garabik@kassiopeia.juls.savba.sk>  Sun, 24 Apr 2016 10:45:41 +0200

unicode (2.1) unstable; urgency=low

  * add octal character code
  * fix crash when displaying numeric and digit properties from internal
    python database (closes: #810927)
  * fix default unicodedata path(s)

 -- Radovan Garabík <garabik@kassiopeia.juls.savba.sk>  Thu, 14 Jan 2016 17:24:58 +0100

unicode (2) unstable; urgency=low

  * new version, completely reworked formatting
  * full python3 support
  * drop old python2.5 compatibility
  * implement --brief (closes: #708318)
  * implement --format (closes: #605642)
  * update Debian packaging

 -- Radovan Garabík <garabik@kassiopeia.juls.savba.sk>  Wed, 21 Oct 2015 20:50:31 +0200

unicode (1) unstable; urgency=low

  * added --wt to query wiktionary
  * fix (somewhat) tabular display of fullwidth characters;
    try unicode 4000..5000
  * this is the last version that tries to keep rigorously compatibility with
    older python versions (going even back to pre-2.3)
