@@ -1,8 +1,9 @@
 unicode (2.6) unstable; urgency=low
 
   * fix crash when using Uxxxx (as opposed to U+xxxx) (closes: #836594)
+  * python3 by default
 
- -- Radovan Garabík <garabik@kassiopeia.juls.savba.sk>  Fri, 14 Jul 2017 16:41:29 +0200
+ -- Radovan Garabík <garabik@kassiopeia.juls.savba.sk>  Mon, 09 Apr 2018 16:41:29 +0200
 
 unicode (2.5) unstable; urgency=low
 
